2023-04-05 Paulo Andrade <pcpa@gnu.org>

	* include/lightning.h.in: Define new unldr, unldi, unldr_x,
	unldi_x, unstr, unsti, unldr_x and unstr_x instructions.
	Remove comment about internal backend specific codes, as they
	are required by unldr_x and unstr_x in some code paths.
	* lib/lightning.c: Implement generic movi_f_w, movi_d_w and
	movi_d_ww that are actually the same for all ports.
	Define generic load/store implementations when unaligned memory
	access does not trap.

2023-03-23 Paulo Andrade <pcpa@gnu.org>

	* include/lightning.h.in: Define new qlshr, qlshi, qlshr_u,
	qlshi_u, qrshr, qrshi, qrshr_u and qrshi_u instructions.
	* lib/jit_fallback.c: Implement new fallbacks.
	* lib/jit_names.c: Update debug information.
	* lib/lightning.c: Add code to update regsets, matching other
	instructions with two outputs.

2023-03-20 Paulo Andrade <pcpa@gnu.org>

	* check/all.tst: Add missing instructions to debug encoding.
	* check/lightning.c: Implement calls to the new rich set of
	instructions, with an immediate argument, mostly which are resolved
	at code generation time. With the exception of jit_negi_{f,d},
	jit_absi{f,d} and jit_sqrti_{f,d} that generate code to execute at
	runtime. This is required because the code generator should create
	the proper float environment with rounding modes, exceptions, etc.
	The new jit_depi is just a wrapper to have the second operand as an
	immediate and call jit_depr.
	* include/lightning.h.in: Declare new instructions code and function
	prototypes as appropriate.
	* include/lightning/jit_private.h: Add 4 new macros to generate
	synthetic debug for float operations with an immediate argument.
	* lib/jit_aarch64.c, lib/jit_alpha.c, lib/jit_arm.c, lib/jit_hppa.c,
	lib/jit_ia64.c, lib/jit_loongarch.c, lib/jit_mips.c, lib/jit_ppc.c,
	lib/jit_riscv.c, lib/jit_s390.c, lib/jit_sparc.c, lib/jit_x86.c:
	Add code to call the generic code to implement new instructions
	with immediate operands.