@@ -230,7 +230,11 @@ _jit_print_node(jit_state_t *_jit, jit_node_t *node)
 	r_w_w:
 	    print_chr(' ');	print_reg(node->u.w);
 	    print_chr(' ');	print_hex(node->v.w);
-	    print_chr(' ');	print_dec(node->w.w);	return;
+	    print_chr(' ');
+	    if (node->code == jit_code_movi_ww_d)
+		print_hex(node->w.w);
+	    else
+		print_dec(node->w.w);			return;
 	w_r_w:
 	    print_chr(' ');	print_hex(node->u.w);
 	    print_chr(' ');	print_reg(node->v.w);
